Fixed double scrollbar issue in Note & non scrolling handles

--- a/assets/css/edit-sass.scss
+++ b/assets/css/edit-sass.scss
@@ -1001,6 +1001,7 @@ nav.navbar {
         background-color: white;
         background-image: none !important;
         left: 252px;
+        overflow: hidden;
         .content {
             height: 100%;
             right: 0px;
